--- a/styleguide.html
+++ b/styleguide.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/components/components.css">
     <!-- endbuild -->
 
-    <title>Visual Style Guide — Eri Universal Institute</title>
+    <title>Visual Style Guide — Web Starter Kit</title>
     <style>
       .auto-gen-code-snippet {
         display: none;
@@ -25,7 +25,7 @@
   <body class="page--styleguide">
 
     <div class="container">
-      <h1> <strong>Eri Universal Institute </strong></h1>
+      <h1><strong>EEBC Watch</strong></h1>
     </div>
 
     <div class="summary-header">
