--- a/styleguide.html
+++ b/styleguide.html
@@ -5,14 +5,18 @@
     <meta name="description" content="Visual style guide used by this site.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
-    <meta itemprop="name" content="Visual Style Guide — Web Starter Kit">
+    <meta itemprop="name" content="Visual Style Guide — EEBC WATCH">
     <meta itemprop="description" content="Visual style guide used by this site.">
 
     <!-- build:css(app/) styles/components/components.css -->
     <link rel="stylesheet" href="styles/components/components.css">
     <!-- endbuild -->
 
-    <title>Visual Style Guide — Web Starter Kit</title>
+    <title>Visual Style Guide — EEBC WATCH</title>
+
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.indigo-pink.min.css">
+<script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <style>
       .auto-gen-code-snippet {
         display: none;
@@ -52,6 +56,9 @@
           <li class="summary-header__anchors-item"><a href="#featured-list">Featured list</a></li>
           <li class="summary-header__anchors-item"><a href="#next-lessons">Featured block</a></li>
           <li class="summary-header__anchors-item"><a href="#article-navigation">Article navigation</a></li>
+          <li class="summary-header__anchors-item"><a href="#Slide-show">Slide Show</a></li>
+          <li class="summary-header__anchors-item"><a href="#Slide-show">Video Player</a></li>
+          <li class="summary-header__anchors-item"><a href="#Slide-show">Audio Player</a></li>
         </ol>
       </div>
     </div>
@@ -1142,6 +1149,20 @@
           </nav>
         </div>
       </section>
+    </div>
+    <div class="mdl-card mdl-shadow--2dp demo-card-square">
+      <div class="mdl-card__title mdl-card--expand">
+        <h2 class="mdl-card__title-text">Update</h2>
+      </div>
+      <div class="mdl-card__supporting-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Aenan convallis.
+      </div>
+      <div class="mdl-card__actions mdl-card--border">
+        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          View Updates
+        </a>
+      </div>
     </div>
 
     <footer id="gc-footer">
