--- a/multimedia.html
+++ b/multimedia.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="A website to archieve and document events, news and important dates in regards to the Eritrea Ethiopia Border Commission Ruling.">
+    <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EEBC WATCH</title>
 
@@ -12,13 +12,13 @@
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="EEBC WATCH">
+    <meta name="application-name" content="Web Starter Kit">
     <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="eebc watch">
+    <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
@@ -45,9 +45,7 @@
     <header class="app-bar promote-layer">
       <div class="app-bar-container">
         <button class="menu"><img src="images/hamburger.svg" alt="Menu"></button>
-        <h1 class="logo"><strong> EEBC WATCH </strong></h1>
-        <br>
-        <p class="small">Eritrea Ethiopia Border Comission Watch</p>
+        <h1 class="logo" <strong>ERI CoOPerative</strong></h1>
         <section class="app-bar-actions">
         <!-- Put App Bar Buttons Here -->
 		    <button><i class="material-icons"></i></button>
@@ -73,91 +71,9 @@
 
     <main>
 
-
-<br>
-      <div class="g-medium--full g-wide--full">
-        <div class="slider">
-  				<div class="item blue"> <img src="images/eseebc.jpg" alt="Menu"></div>
-  				<div class="item yellow"><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect">
-  Sign Petition
-</button></div>
-  				<div class="item red"> Item 3 </div>
-  				<div class="item green">Item 4 </div>
-  			</div>
-		  <br>
-
-      </div>
+      </main>
 
 
-    <div class="g--third customsection">
-      <div class="mdl-card mdl-shadow--2dp demo-card-square">
-    <div class="mdl-card__title mdl-card--expand">
-      <h2 class="mdl-card__title-text">News</h2>
-    </div>
-    <div class="mdl-card__supporting-text">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Aenan convallis.
-    </div>
-    <div class="mdl-card__actions mdl-card--border">
-      <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-        View Updates
-      </a>
-    </div>
-  </div>
-		</div>
-	<div class="g--third">
-    <!-- Event card -->
-    <style>
-      .demo-card-event.mdl-card {
-        width: 100%;
-        height: 100%;
-        background: #3E4EB8;
-      }
-      .demo-card-event > .mdl-card__actions {
-        border-color: rgba(255, 255, 255, 0.2);
-      }
-      .demo-card-event > .mdl-card__title,
-      .demo-card-event > .mdl-card__actions > .mdl-button {
-        color: #fff;
-      }
-    </style>
-
-    <div class="mdl-card mdl-shadow--2dp demo-card-event">
-      <div class="mdl-card__title mdl-card--expand">
-        <h4>
-          Featured event:<br>
-          May 24, 2016<br>
-          7-11pm
-        </h4>
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-          Add to Calendar
-        </a>
-      </div>
-    </div>
-
-		</div>
-	<div class="g--third g--last customsection">
-		3
-		</div>
-	<div class="g--third customsection">
-		4
-		</div>
-	<div class="g--third customsection">
-		5
-		</div>
-	<div class="g--third g--last customsection">
-		6
-		</div>
-
-		<div class="g--half customsection">
-		7
-		</div>
-		<div class="g--half g--last customsection">
-		8
-		</div>
-  </main>
 		<div class="g-medium--full g-wide--full">
       <footer class="mdl-mega-footer">
         <div class="mdl-mega-footer--middle-section">
