--- a/voices.html
+++ b/voices.html
@@ -37,15 +37,22 @@
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.indigo-pink.min.css">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
   </head>
   <body>
     <header class="app-bar promote-layer">
       <div class="app-bar-container">
         <button class="menu"><img src="images/hamburger.svg" alt="Menu"></button>
         <h1 class="logo"> <strong>EEBC WATCH</strong></h1>
+
         <section class="app-bar-actions">
+
         <!-- Put App Bar Buttons Here -->
-        <!-- e.g <button><i class="icon icon-star"></i></button> -->
+        <button><i class="icon icon-star"></i></button>
+        <button><i class="icon icon-facebook"></i></button>
+        <button><i class="icon icon-star"></i></button>
+        <button><i class="icon icon-star"></i></button>
+        <button><i class="icon icon-star"></i></button>
         </section>
       </div>
     </header>
@@ -55,89 +62,53 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-		    <li><a href="voices.html">Voices</a></li>
+        <li><a href="voices.html">Voices</a></li>
         <li><a href="actnow.html">ActNow</a></li>
-	      <li><a href="timeline.html">Timeline</a></li>
-	      <li><a href="documentation.html">Doumentation</a></li>
-	      <li><a href="multimedia.html">Multimedia</a></li>
+        <li><a href="timeline.html">Timeline</a></li>
+        <li><a href="documentation.html">Doumentation</a></li>
+        <li><a href="multimedia.html">Multimedia</a></li>
         <li><a href="contacts.html">Contact</a></li>
         <li><a href="styleguide.html">Style Guide</a></li>
       </ul>
     </nav>
 
     <main>
-
-
-    <section class="styleguide__guides-section">
-    <div class="guides-section">
-        <header class="container">
-            <h2 class="xxlarge">Legal & Acadamic Docs</h2>
-            <p>Follow these guides and build web content users can access on any device they choose.</p>
-        </header>
-        <ul class="guides-list container-medium">
-            <li class="guides-list__item g--half theme--multi-device-layouts ">
-                <div class="primary-content">
-                    <h3 class="xlarge"><a href="#ignore-click" title="Go to Multi-Device Layouts" class="themed">The EEBC</a></h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, velit, illum iure id in saepe laborum. Doloribus, eaque, assumenda inventore eos iusto tenetur error dolorem suscipit molestiae natus ullam aliquam?</p>
-                </div>
-                <div class="secondary-content">
-                    <span class="icon-circle themed--background"><i class="icon icon-lessons"></i></span>
-                    <ol class="list-links list-links--secondary">
-                        <li><a href="#ignore-click" title="Read the lesson Responsive Web Design Fundamentals">Responsive Web Design Fundamentals</a></li>
-                        <li><a href="#ignore-click" title="Read the lesson Responsive Web Design Patterns">Responsive Web Design Patterns</a></li>
-                        <li><a href="#ignore-click" title="Read the lesson Navigation and Action Patterns">Navigation and Action Patterns</a></li>
-                    </ol>
-                </div>
-            </li>
-            <li class="guides-list__item g--half theme--introduction-to-media g--last">
-                <div class="primary-content">
-                    <h3 class="xlarge"><a href="#ignore-click" title="Go to Images, Audio and Video" class="themed">The EECC</a></h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, fugit ea maiores omnis ad iste autem sed reiciendis amet quam deleniti sapiente laboriosam voluptate pariatur veniam quod beatae sunt architecto?</p>
-                </div>
-                <div class="secondary-content">
-                    <span class="icon-circle themed--background"><i class="icon icon-lessons"></i></span>
-                    <ol class="list-links list-links--secondary">
-                        <li><a href="#ignore-click" title="Read the lesson Images">The Mandate</a></li>
-                        <li><a href="#ignore-click" title="Read the lesson Video">The Verdict</a></li>
-                        <li><a href="#ignore-click" title="Read the lesson Audio">Oxford University Critical Analysis</a></li>
-                    </ol>
-                </div>
-            </li>
-            <li class="guides-list__item g--half theme--user-input ">
-                <div class="primary-content">
-                    <h3 class="xlarge"><a href="#ignore-click" title="Go to Forms and User Input" class="themed">The Gurantoors</a></h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, adipisci, aspernatur. Velit, consequatur, temporibus, neque minus obcaecati dolor officia architecto voluptatem et pariatur quo vitae saepe laborum ratione eum. Soluta.</p>
-                </div>
-                <div class="secondary-content">
-                    <span class="icon-circle themed--background"><i class="icon icon-lessons"></i></span>
-                    <ol class="list-links list-links--secondary">
-                        <li><a href="#ignore-click" title="Read the lesson Create Amazing Forms">Create Amazing Forms</a></li>
-                        <li><a href="#ignore-click" title="Read the lesson Add Touch to Your Site">Add Touch to Your Site</a></li>
-                    </ol>
-                </div>
-            </li>
-            <li class="guides-list__item g--half theme--performance g--last">
-                <div class="primary-content">
-                    <h3 class="xlarge"><a href="#ignore-click" title="Go to Optimizing Performance" class="themed">The Peace Process</a></h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ratione officia officiis natus illum quos cumque quis! Optio, dolore, eligendi ea culpa quod esse atque architecto reprehenderit at tempora itaque!</p>
-                </div>
-                <div class="secondary-content">
-                    <span class="icon-circle themed--background"><i class="icon icon-lessons"></i></span>
-                    <ol class="list-links list-links--secondary">
-                        <li><a href="#ignore-click" title="Read the lesson Critical Rendering Path">Critical Rendering Path</a></li>
-                        <li><a href="#ignore-click" title="Read the lesson Optimizing Content Efficiency">Optimizing Content Efficiency</a></li>
-                    </ol>
-                </div>
-            </li>
-        </ul>
-    </div>
-</section>
-
-
-
-
-
-
+      <section class="styleguide__featured-section">
+      <div class="featured-section">
+          <div class="container-medium">
+              <ul class="featured-list">
+                  <li class="featured-list__item clear">
+                      <div class="container-small">
+                          <div class="featured-list__content g--half">
+                              <h3>Case study</h3>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, incidunt harum aut quae eaque sequi sunt molestiae tenetur vitae.</p>
+                              <a href="#ignore-click" class="cta--primary">View Google</a>
+                          </div>
+                          <div class="featured-list__img-wrapper g--half g--last">
+                              <div class="featured-list__img">
+                                  <img src="images/icons/placeholder--small.png" alt="small image placeholder example">
+                              </div>
+                          </div>
+                      </div>
+                  </li>
+                  <li class="featured-list__item clear">
+                      <div class="container-small">
+                          <div class="featured-list__content g--half">
+                              <h3>Case study</h3>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, incidunt harum aut quae eaque sequi sunt molestiae tenetur vitae.</p>
+                              <a href="#ignore-click" class="cta--primary">View Google</a>
+                          </div>
+                          <div class="featured-list__img-wrapper g--half g--last">
+                              <div class="featured-list__img">
+                                  <img src="images/icons/placeholder--small.png" alt="small image placeholder example">
+                              </div>
+                          </div>
+                      </div>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </section>
     </main>
     <footer class="mdl-mega-footer">
       <div class="mdl-mega-footer--middle-section">
